django/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  # type: NodePort
  type: LoadBalancer
  selector:
    app: django
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
